# Linkedin_Job_Bot_With_Telegram

./: .gitignore  LICENSE  README.md
linkedin_jobs_notification/: .env.example  .gitignore  README.md  config.py  config.yaml.example  main.py  notifier.py  pyproject.toml  store.py
linkedin_jobs_notification/tests/: test_config.py  test_notifier.py  test_store.py
linkedin_scraper/: .env.example  README.md  pyproject.toml
linkedin_scraper/linkedin_scraper/scrapers/: job_search.py
linkedin_scraper/tests/: test_job_scraper.py
